fix: modify alignment for image text and buttons
Refs: #12

--- a/src/styles/makeup-collections.scss
+++ b/src/styles/makeup-collections.scss
@@ -2,6 +2,12 @@
   background-color: hotpink;
 }
 
+.collection-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .image {
   object-fit: cover;
 }
